--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
     "global": "^4.4.0",
     "typescript": "^4.2.3"
   },
+  "scripts": {
+      "start": "ts-node ./index.ts --project ./tsconfig.json"
+  },
   "name": "my-hooks",
   "version": "1.0.0",
   "main": "index.js",
